--- a/src/pages/Markmap/Site/Site.css
+++ b/src/pages/Markmap/Site/Site.css
@@ -1,6 +1,6 @@
 .site {
   position: absolute;
-  background-color: rgba(255, 0, 0, 0.185);
+  background-color: rgba(255, 0, 0,0.5);
 }
 
 .sitelogo {
