--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -20,7 +20,7 @@
 
 .home-back {
   position: absolute;
-  background-image: url(../../assets/homePart.jpg);
+  background-image: url(../../assets/smHomePart.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
