--- a/src/pages/Honor/Honor.css
+++ b/src/pages/Honor/Honor.css
@@ -28,3 +28,10 @@
 .position-con {
   position: relative;
 }
+
+.wechat {
+  position: relative;
+  width: 50%;
+  transform: translateX(50%);
+  margin-top: 60px;
+}
